--- a/friend-tournament.html
+++ b/friend-tournament.html
@@ -257,6 +257,25 @@
     </div>
 
     <script src="friend-tournament.js"></script>
+<div id="game-overlay" class="hidden">
+    <iframe id="game-frame" src="" frameborder="0"></iframe>
+</div>
 
+<style>
+    /* Add this style block or append to your CSS */
+    #game-overlay {
+        position: fixed;
+        top: 0; left: 0;
+        width: 100vw; height: 100vh;
+        background: #000;
+        z-index: 9999; /* Sit on top of everything */
+    }
+    #game-frame {
+        width: 100%;
+        height: 100%;
+        border: none;
+    }
+    .hidden { display: none; }
+</style>
 </body>
 </html>
