tournament-setup.html

--- a/tournament-setup.html
+++ b/tournament-setup.html
@@ -169,10 +169,10 @@
             </div>
             
             <div style="width: 100%; display: flex; flex-direction: column; align-items: center; gap: 20px;">
-                <button class="btn-blue" onclick="window.location.href='friend-tournament.html'">
+                <button class="btn-blue" onclick="window.location.href='friend-tournament-game.html'">
                     HOST TOURNAMENT
                 </button>
-                <button class="btn-outline" onclick="window.location.href='friend-tournament.html'">
+                <button class="btn-outline" onclick="window.location.href='friend-tournament-game.html'">
                     <i class="fa-solid fa-plug"></i> JOIN TOURNAMENT
                 </button>
             </div>
