--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
             <div class="sidebar-footer">
                 <li><a href="#">Settings</a></li>
-                <li><a href="#">Report a Bug</a></li>
+                <li><a href="report-bug.html"><i class="fa-solid fa-bug"></i> Report a Bug</a></li>
             </div>
         </nav>
 
