report-bug.html

--- a/report-bug.html
+++ b/report-bug.html
@@ -27,7 +27,7 @@
                 <p style="color: #999;">Found a glitch? Let us know so we can fix it.</p>
             </div>
 
-            <form id="bug-form" action="https://formspree.io/f/YOUR_FORMSPREE_ID" method="POST">
+            <form id="bug-form" action="https://formspree.io/f/https://formspree.io/f/xgoynpvp" method="POST">
                 
                 <div style="margin-bottom: 20px;">
                     <label style="color: var(--accent-gold); font-weight: bold; display: block; margin-bottom: 10px;">YOUR NAME</label>
@@ -72,7 +72,6 @@
             
             // --- IF YOU ARE USING FORMSPREE (Real Emails) ---
             // Uncomment the lines below to actually send data
-            /*
             fetch(event.target.action, {
                 method: form.method,
                 body: data,
@@ -85,7 +84,6 @@
                     alert("Oops! There was a problem submitting your form.");
                 }
             });
-            */
 
             // --- SIMULATION MODE (Just to test the UI) ---
             // Remove this block when you add your real Formspree ID
