report-bug.html

--- a/report-bug.html
+++ b/report-bug.html
@@ -188,7 +188,7 @@
 
     <div class="top-bar">
         <div class="logo-area">
-            <img src="ISF_ONLINE.png" alt="ISF Online" class="logo-img"> 
+            <img src="assets/ISF_ONLINE.png" alt="ISF Online" class="logo-img"> 
         </div>
         <div class="auth-buttons">
             <button class="btn-home" onclick="window.location.href='index.html'">Main Menu</button>
