report-bug.html

--- a/report-bug.html
+++ b/report-bug.html
@@ -209,7 +209,7 @@
                 
                 <div class="input-group">
                     <label class="input-label">Your Name</label>
-                    <input type="text" name="name" required class="lobby-input" placeholder="ENTER NICKNAME...">
+                    <input type="text" name="name" required class="lobby-input" placeholder="ENTER NAME...">
                 </div>
 
                 <div class="input-group">
