--- a/signup.html
+++ b/signup.html
@@ -104,7 +104,7 @@
 
     <div class="top-bar">
         <div class="logo-area">
-            <img src="ISF_ONLINE.png" alt="ISF Online" style="height: 40px;">
+            <img src="assets/ISF_ONLINE.png" alt="ISF Online" style="height: 40px;">
         </div>
         <div class="auth-buttons">
             <button class="btn-login" style="border: 1px solid #333; color: #888; background: transparent; padding: 8px 20px; cursor: pointer;" onclick="window.location.href='index.html'">CANCEL</button>
