--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <li class="active"><a href="#">Home</a></li>
                 <li><a href="how-to-play.html">How to Play</a></li>
                 <li><a href="https://sprucewilliams.github.io/Slaps-Online/matchtable.html">Game History</a></li>
-                <li><a href="https://sprucewilliams.github.io/Slaps-Online/ratingtable.html">Leaderboard</a></li>
+                <li><a href="leaderboard.html">Leaderboard</a></li>
                 <li><a href="assets/SLAPS rules and regs v1.2-compressed.pdf" target="_blank">Rules & Regs</a></li>
             </ul>
 
@@ -134,14 +134,13 @@
                     <button class="btn-mode-play">PLAY</button>
                 </div>
 
-                <div class="mode-box disabled">
-                    <div class="mode-icon">
-                        <i class="fa-solid fa-medal"></i>
-                    </div>
-                    <h3>PLAY<br>LEAGUE</h3>
-                    <button class="btn-mode-coming">COMING SOON</button>
-                </div>
-
+               <div class="mode-box" onclick="window.location.href='leaderboard.html'">
+    <div class="mode-icon">
+        <i class="fa-solid fa-chart-simple"></i>
+    </div>
+    <h3>GLOBAL<br>RANKINGS</h3>
+    <button class="btn-mode-play">VIEW</button>
+</div>
             </div>
         </aside>
 
