multiplayer-game.html

--- a/multiplayer-game.html
+++ b/multiplayer-game.html
@@ -85,6 +85,13 @@
         <button class="btn-action-small" onclick="declineRematch()" style="background:#ff4444;">NO</button>
     </div>
 </div>
-    <script src="multiplayer-game.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
+
+<script src="firebase-init.js"></script>
+
+<script src="multiplayer-game.js">
+</script>
 </body>
 </html>
