--- a/signup.html
+++ b/signup.html
@@ -122,7 +122,7 @@
                         <div class="custom-option" onclick="selectOption('DZA', 'assets/flags/Algeria.png', 'Algeria')">
                             <img src="assets/flags/Algeria.png" alt="DZA"> Algeria
                         </div>
-                        <div class="custom-option" onclick="selectOption('ASM', 'assets/flags/American Samoa.png', 'American Samoa')">
+                        <div class="custom-option" onclick="selectOption('ASM', 'assets/flags/AmericanSamoa.png', 'American Samoa')">
                             <img src="assets/flags/American Samoa.png" alt="ASM"> American Samoa
                         </div>
                         <div class="custom-option" onclick="selectOption('AND', 'assets/flags/Andorra.png', 'Andorra')">
@@ -134,7 +134,7 @@
                         <div class="custom-option" onclick="selectOption('AIA', 'assets/flags/Anguilla.png', 'Anguilla')">
                             <img src="assets/flags/Anguilla.png" alt="AIA"> Anguilla
                         </div>
-                        <div class="custom-option" onclick="selectOption('ATG', 'assets/flags/Antigua and Barbuda.png', 'Antigua and Barbuda')">
+                        <div class="custom-option" onclick="selectOption('ATG', 'assets/flags/AntiguaandBarbuda.png', 'Antigua and Barbuda')">
                             <img src="assets/flags/Antigua and Barbuda.png" alt="ATG"> Antigua and Barbuda
                         </div>
                         <div class="custom-option" onclick="selectOption('ARG', 'assets/flags/Argentina.png', 'Argentina')">
@@ -191,7 +191,7 @@
                         <div class="custom-option" onclick="selectOption('BOE', 'assets/flags/Bonaire.png', 'Bonaire')">
                             <img src="assets/flags/Bonaire.png" alt="BOE"> Bonaire
                         </div>
-                        <div class="custom-option" onclick="selectOption('BIH', 'assets/flags/Bosnia and Herzegovina.png', 'Bosnia and Herzegovina')">
+                        <div class="custom-option" onclick="selectOption('BIH', 'assets/flags/BosniaandHerzegovina.png', 'Bosnia and Herzegovina')">
                             <img src="assets/flags/Bosnia and Herzegovina.png" alt="BIH"> Bosnia and Herzegovina
                         </div>
                         <div class="custom-option" onclick="selectOption('BWA', 'assets/flags/Botswana.png', 'Botswana')">
@@ -209,7 +209,7 @@
                         <div class="custom-option" onclick="selectOption('BGR', 'assets/flags/Bulgaria.png', 'Bulgaria')">
                             <img src="assets/flags/Bulgaria.png" alt="BGR"> Bulgaria
                         </div>
-                        <div class="custom-option" onclick="selectOption('BFA', 'assets/flags/Burkina Faso.png', 'Burkina Faso')">
+                        <div class="custom-option" onclick="selectOption('BFA', 'assets/flags/BurkinaFaso.png', 'Burkina Faso')">
                             <img src="assets/flags/Burkina Faso.png" alt="BFA"> Burkina Faso
                         </div>
                         <div class="custom-option" onclick="selectOption('BDI', 'assets/flags/Burundi.png', 'Burundi')">
@@ -278,8 +278,8 @@
                         <div class="custom-option" onclick="selectOption('CZE', 'assets/flags/Czechia.png', 'Czechia')">
                             <img src="assets/flags/Czechia.png" alt="CZE"> Czechia
                         </div>
-                        <div class="custom-option" onclick="selectOption('COD', 'assets/flags/Democratic Republic of the Congo.png', 'Democratic Republic of the Congo')">
-                            <img src="assets/flags/Democratic Republic of the Congo.png" alt="COD"> Democratic Republic of the Congo
+                        <div class="custom-option" onclick="selectOption('COD', 'assets/flags/Democratic Republic Congo.png', 'Democratic Republic of the Congo')">
+                            <img src="assets/flags/Democratic Republic Congo.png" alt="COD"> Democratic Republic of the Congo
                         </div>
                         <div class="custom-option" onclick="selectOption('DNK', 'assets/flags/Denmark.png', 'Denmark')">
                             <img src="assets/flags/Denmark.png" alt="DNK"> Denmark
@@ -692,8 +692,8 @@
                         <div class="custom-option" onclick="selectOption('SYC', 'assets/flags/Seychelles.png', 'Seychelles')">
                             <img src="assets/flags/Seychelles.png" alt="SYC"> Seychelles
                         </div>
-                        <div class="custom-option" onclick="selectOption('SLE', 'assets/flags/Sierra Leone.png', 'Sierra Leone')">
-                            <img src="assets/flags/Sierra Leone.png" alt="SLE"> Sierra Leone
+                        <div class="custom-option" onclick="selectOption('SLE', 'assets/flags/Sierre Leone.png', 'Sierra Leone')">
+                            <img src="assets/flags/Sierre Leone.png" alt="SLE"> Sierra Leone
                         </div>
                         <div class="custom-option" onclick="selectOption('SGP', 'assets/flags/Singapore.png', 'Singapore')">
                             <img src="assets/flags/Singapore.png" alt="SGP"> Singapore
