--- a/multiplayer-game.html
+++ b/multiplayer-game.html
@@ -88,15 +88,31 @@
         </div>
         <div class="foundation-box player-box" id="player-foundation-area"></div>
     </div>
-
-    <div id="rematch-modal" class="message-modal hidden" style="z-index: 5000; margin-top: 200px;">
-        <h1>REMATCH?</h1>
-        <p>Your opponent wants to play again.</p>
-        <div style="display:flex; gap:15px; justify-content:center; margin-top:20px;">
-            <button class="btn-action-small" onclick="acceptRematch()" style="background:#66ff66; color:#000;">YES</button>
-            <button class="btn-action-small" onclick="declineRematch()" style="background:#ff4444;">NO</button>
-        </div>
+<div id="rematch-modal" class="message-modal hidden" style="z-index: 5000; margin-top: 200px;">
+    <h1>REMATCH?</h1>
+    <p>Your opponent wants to play again.</p>
+    <div style="display:flex; gap:15px; justify-content:center; margin-top:20px;">
+        <button class="btn-action-small" onclick="acceptRematch()" style="background:#66ff66; color:#000;">YES</button>
+        <button class="btn-action-small" onclick="declineRematch()" style="background:#ff4444;">NO</button>
     </div>
+</div>
+
+<div id="concession-modal" class="message-modal hidden" style="z-index: 6000; margin-top: 0;">
+    <h1 style="color: #00ccff;">OPPONENT CONCEDES</h1>
+    <p style="font-size: 0.9rem; margin-bottom: 20px;">
+        Your opponent wants to quit.<br>
+        <strong>Accept</strong> to void the match (No ELO change).<br>
+        <strong>Decline</strong> to claim the victory (You Win, They Lose).
+    </p>
+    <div style="display:flex; gap:15px; justify-content:center;">
+        <button class="btn-action-small" onclick="respondConcession(true)" style="background:#444; color:#fff; width:auto; padding: 10px 20px;">
+            ACCEPT (VOID)
+        </button>
+        <button class="btn-action-small" onclick="respondConcession(false)" style="background:#66ff66; color:#000; width:auto; padding: 10px 20px;">
+            DECLINE (WIN)
+        </button>
+    </div>
+</div>
 
     <script src="multiplayer-game.js"></script>
 
