--- a/multiplayer-game.html
+++ b/multiplayer-game.html
@@ -88,31 +88,41 @@
         </div>
         <div class="foundation-box player-box" id="player-foundation-area"></div>
     </div>
-<div id="rematch-modal" class="message-modal hidden" style="z-index: 5000; margin-top: 200px;">
-    <h1>REMATCH?</h1>
-    <p>Your opponent wants to play again.</p>
-    <div style="display:flex; gap:15px; justify-content:center; margin-top:20px;">
-        <button class="btn-action-small" onclick="acceptRematch()" style="background:#66ff66; color:#000;">YES</button>
-        <button class="btn-action-small" onclick="declineRematch()" style="background:#ff4444;">NO</button>
-    </div>
-</div>
 
-<div id="concession-modal" class="message-modal hidden" style="z-index: 6000; margin-top: 0;">
-    <h1 style="color: #00ccff;">OPPONENT CONCEDES</h1>
-    <p style="font-size: 0.9rem; margin-bottom: 20px;">
-        Your opponent wants to quit.<br>
-        <strong>Accept</strong> to void the match (No ELO change).<br>
-        <strong>Decline</strong> to claim the victory (You Win, They Lose).
-    </p>
-    <div style="display:flex; gap:15px; justify-content:center;">
-        <button class="btn-action-small" onclick="respondConcession(true)" style="background:#444; color:#fff; width:auto; padding: 10px 20px;">
-            ACCEPT (VOID)
-        </button>
-        <button class="btn-action-small" onclick="respondConcession(false)" style="background:#66ff66; color:#000; width:auto; padding: 10px 20px;">
-            DECLINE (WIN)
-        </button>
+    <div id="rematch-modal" class="message-modal hidden" style="z-index: 5000; margin-top: 200px;">
+        <h1>REMATCH?</h1>
+        <p>Your opponent wants to play again.</p>
+        <div style="display:flex; gap:15px; justify-content:center; margin-top:20px;">
+            <button class="btn-action-small" onclick="acceptRematch()" style="background:#66ff66; color:#000;">YES</button>
+            <button class="btn-action-small" onclick="declineRematch()" style="background:#ff4444;">NO</button>
+        </div>
     </div>
-</div>
+
+    <div id="concession-modal" class="message-modal hidden" style="z-index: 6000; margin-top: 0;">
+        <h1 style="color: #00ccff;">OPPONENT CONCEDES</h1>
+        <p style="font-size: 0.9rem; margin-bottom: 20px;">
+            Your opponent wants to quit.<br>
+            <strong>Accept</strong> to void the match (No ELO change).<br>
+            <strong>Decline</strong> to claim the victory (You Win, They Lose).
+        </p>
+        <div style="display:flex; gap:15px; justify-content:center;">
+            <button class="btn-action-small" onclick="respondConcession(true)" style="background:#444; color:#fff; width:auto; padding: 10px 20px;">
+                ACCEPT (VOID)
+            </button>
+            <button class="btn-action-small" onclick="respondConcession(false)" style="background:#66ff66; color:#000; width:auto; padding: 10px 20px;">
+                DECLINE (WIN)
+            </button>
+        </div>
+    </div>
+
+    <div id="concession-waiting-overlay" class="message-modal hidden" style="z-index: 7000; background: rgba(0,0,0,0.95);">
+        <h1 style="color: #888;">REQUEST SENT</h1>
+        <div style="margin: 20px 0;">
+            <i class="fa-solid fa-spinner fa-spin" style="font-size: 3rem; color: #00ccff;"></i>
+        </div>
+        <p>Waiting for opponent to Accept or Decline...</p>
+        <p style="font-size: 0.8rem; color: #666;">(Do not close this window)</p>
+    </div>
 
     <script src="multiplayer-game.js"></script>
 
