--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
             <div class="sidebar-footer">
                 <li><a href="#">Settings</a></li>
-                <li><a href="report-a-bug.html">Report a Bug</a></li>
+                <li><a href="report-bug.html">Report a Bug</a></li>
             </div>
         </nav>
 
